# smartsre-copilot-py

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Caddyfile  Dockerfile  LICENSE  MAINTAINERS.md  Makefile  PLAN.md  README.md  README.zh-CN.md  SECURITY.md  SUPPORT.md  alembic.ini  docker-compose.yml  pyproject.toml  pyrightconfig.json  start-windows.bat  stop-windows.bat
.github/: CODEOWNERS  dependabot.yml  labels.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
alembic/: env.py
alembic/versions/: 20260423_0001_initial_schema.py  20260423_0002_indexing_task_retries.py  20260423_0003_agent_checkpoints.py  20260423_0004_aiops_run_events.py  20260423_0005_chat_tool_events.py  20260428_0006_native_agent_runtime.py  20260507_0007_pgvector_knowledge_store.py  20260507_0008_agent_run_metrics.py  20260508_0009_agent_decision_metrics.py  20260508_0010_agent_feedback_badcase.py  20260508_0011_agent_memory.py  20260508_0012_agent_badcase_review.py  20260508_0013_agent_badcase_knowledge.py  20260516_0014_agent_event_metrics.py  20260516_0015_agent_memory_embedding.py  20260517_0016_agent_release_gate_metrics.py
app/: __init__.py  config.py  main.py  worker.py
app/agent/: mcp_client.py  tool_registry.py
app/agent/aiops/: executor.py  planner.py  replanner.py  state.py  utils.py
app/agent_runtime/: __init__.py  approval.py  constants.py  context.py  decision.py  events.py  evidence.py  executor.py  guardrails.py  loop.py  memory_extractor.py  memory_retriever.py  metrics_collector.py  planner.py  policy.py  ports.py  recovery.py  runtime.py  state.py  synthesizer.py  tool_catalog.py  tool_executor.py  trace_collector.py
app/api/: aiops.py  chat.py  deps.py  file.py  health.py  main.py  providers.py  responses.py
app/api/routes/: __init__.py  agent_metrics.py  aiops.py  chat.py  contracts.py  file.py  health.py  native_agent.py  scenario_regression.py
app/application/: agent_metrics_service.py  agent_resume_service.py  aiops_application_service.py  api_contract_service.py  chat_application_service.py  native_agent_application_service.py  scenario_regression_service.py
app/application/chat/: __init__.py  rag_agent_service.py
app/application/indexing/: __init__.py  service.py
app/core/: config.py  container.py  exceptions.py  llm_factory.py  milvus_client.py
app/domains/: __init__.py
app/domains/aiops/: __init__.py  schemas.py
app/domains/chat/: __init__.py  schemas.py
app/domains/native_agent/: __init__.py  entities.py  schemas.py
app/infrastructure/: __init__.py  checkpoint_store.py  object_storage.py  redis_client.py
app/infrastructure/knowledge/: __init__.py  document_splitter_service.py  vector_embedding_service.py  vector_index_service.py  vector_search_service.py  vector_store_manager.py
app/infrastructure/tasks/: __init__.py  agent_resume.py  dispatcher.py
app/models/: aiops.py  document.py  request.py
app/observability/: __init__.py  metrics.py
app/persistence/: __init__.py  database.py  repositories.py  schema.py
app/platform/: compat.py
app/security/: __init__.py  auth.py  rate_limit.py
app/services/: aiops_service.py  document_splitter_service.py  indexing_task_service.py  rag_agent_service.py  task_dispatcher.py  vector_embedding_service.py  vector_index_service.py  vector_store_manager.py
app/utils/: logger.py
config/: .env.prod.example  .env.staging.example  otel-collector.yaml  prometheus.yml
docs/: architecture.md  deployment.md  development-workflow.md  openapi.json  release-process.md  repository-governance.md  security.md
frontend/: .env.example  Dockerfile  README.md  eslint.config.mjs  next.config.mjs  package.json  playwright.config.ts  pnpm-lock.yaml
frontend/app/: error.tsx  globals.css  layout.tsx  not-found.tsx
frontend/components/: app-error-fallback.tsx  app-sidebar.tsx  health-indicator.tsx  markdown.tsx  mobile-nav.tsx  status-dot.tsx  theme-toggle.tsx  top-bar.tsx
frontend/e2e/: agent-runtime.spec.ts  golden-paths.spec.ts
frontend/lib/: agent-workbench-store.ts  api-client.ts  api-contracts.ts  backend.ts  diagnose-reducer.ts  native-agent-types.ts  scenario-regression-types.ts  sessions-store.ts  sse.ts  types.ts  use-event-stream.ts  use-health.ts
mcp_servers/: README.md  cls_server.py  common.py  monitor_server.py
scripts/: compose_smoke.ps1  export_openapi.py  smoke_test.py
specs/ai-native-runtime/: constitution.md  data-model.md  quickstart.md  spec.md  tasks.md
static/: app.js  index.html
tests/: conftest.py  test_agent_api.py  test_agent_runtime.py  test_aiops_events.py  test_aiops_native_compat.py  test_architecture_boundaries.py  test_auth.py  test_indexing_tasks.py  test_mcp_fallback.py  test_native_agent_repositories.py  test_repositories.py  test_task_dispatcher.py  test_text_encoding.py  test_tool_harness.py  test_tool_registry.py  test_upload_helpers.py
tests/agent_scenarios/: test_scenario_regression.py
tests/contract/: test_api_contracts.py
tests/integration/: test_agent_api.py  test_agent_runtime.py  test_aiops_native_compat.py  test_architecture_boundaries.py  test_auth.py  test_health_degraded.py  test_indexing_tasks.py  test_mcp_fallback.py  test_native_agent_replay.py  test_repositories.py  test_request_context.py  test_task_dispatcher.py  test_tool_harness.py  test_upload_helpers.py  test_vector_embedding_service.py
tests/unit/: conftest.py  test_agent_event_metadata.py  test_agent_metrics_service.py  test_agent_ports_contract.py  test_config_injection.py  test_decision_provider_ports.py  test_decision_runtime_contract.py  test_event_recorder.py  test_evidence.py  test_feedback_loop.py  test_intervention.py  test_memory.py  test_metrics.py  test_proactive.py  test_provider_composition.py  test_react_loop_integration.py  test_recovery.py  test_runtime_bounded_loop.py  test_runtime_foundation.py  test_security_hardening.py  test_text_encoding.py  test_tool_latency.py  test_tool_result_payload.py
(+92 files in other folders)
