[project]
name = "smartsre-copilot"
version = "0.1.0.dev0"
description = "AI-powered SRE assistant with knowledge-grounded chat, AIOps diagnosis, and native agent workbench"
authors = [{name = "Mobicos"}]
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sse-starlette>=3.2.1",
    "langchain>=0.1.0",
    "langchain-community>=0.0.20",
    "langchain-core>=1.3.3",
    "langchain-openai>=1.1.16",
    "langgraph>=1.1.10",
    "dashscope>=1.25.17",
    "openai>=1.10.0",
    "pymilvus>=2.6.12",
    "pydantic>=2.13.3,<3.0.0",
    "pydantic-settings>=2.14.0",
    "httpx>=0.26.0",
    "aiohttp>=3.13.5",
    "aiofiles>=23.2.0",
    "python-multipart>=0.0.27",
    "loguru>=0.7.2",
    "python-dotenv>=1.2.2",
    "psycopg[binary]>=3.3.4",
    "sqlmodel>=0.0.22",
    "redis>=5.0.0",
    "sqlalchemy>=2.0.49,<2.1.0",
    "alembic>=1.14.0",
    "mako>=1.3.12",
    "langchain-milvus>=0.3.3",
    "langchain-text-splitters>=1.1.2",
    "langchain-mcp-adapters>=0.2.2",
    "fastmcp>=3.2.4",
    "langchain-qwq>=0.3.4",
    "prometheus-client>=0.25.0",
    "playwright>=1.59.0",
    "minio>=7.2.20",
]

[project.optional-dependencies]
observability = [
    "opentelemetry-api>=1.30.0",
    "opentelemetry-sdk>=1.30.0",
    "opentelemetry-instrumentation-fastapi>=0.51b0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.30.0",
]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.12.0",
    "testcontainers[postgres]>=4.0.0",
    "black>=26.3.1",
    "ruff>=0.15.12",
    "isort>=5.13.0",
    "mypy>=1.8.0",
    "bandit>=1.7.10",
    "pre-commit>=3.6.0",
    "ipython>=9.13.0",
    "ipdb>=0.13.13",
]

[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]



[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "logs",
    "*.pyc",
    "*.egg-info",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "W191",  # indentation contains tabs
]

[tool.commitizen]
name = "cz_customize"

[tool.commitizen.customize]
message_template = "{{change_type}}({{scope}}): {{message}}"
example = "feat(agent): stream native agent runs"
schema = "<type>(<scope>): <concise action summary>"
schema_pattern = "^(feat|fix|ci|chore|docs|test|refactor|perf)\\((agent|aiops|api|chat|frontend|knowledge|mcp|persistence|worker|docs|local|ci|actions|deps|docker|security|tests|tooling|repo)\\): [a-z0-9].+$"
commit_parser = "^(?P<change_type>feat|fix|ci|chore|docs|test|refactor|perf)\\((?P<scope>agent|aiops|api|chat|frontend|knowledge|mcp|persistence|worker|docs|local|ci|actions|deps|docker|security|tests|tooling|repo)\\): (?P<message>.+)$"

[[tool.commitizen.customize.questions]]
type = "list"
name = "change_type"
message = "Select the type of change"
choices = [
    {value = "feat", name = "feat: user-facing feature"},
    {value = "fix", name = "fix: bug fix or behavior correction"},
    {value = "ci", name = "ci: CI workflow or check configuration"},
    {value = "chore", name = "chore: dependency, tooling, or maintenance"},
    {value = "docs", name = "docs: documentation only"},
    {value = "test", name = "test: tests only"},
    {value = "refactor", name = "refactor: code restructuring"},
    {value = "perf", name = "perf: performance improvement"},
]

[[tool.commitizen.customize.questions]]
type = "list"
name = "scope"
message = "Select the required scope"
choices = [
    "agent",
    "aiops",
    "api",
    "chat",
    "frontend",
    "knowledge",
    "mcp",
    "persistence",
    "worker",
    "docs",
    "local",
    "ci",
    "actions",
    "deps",
    "docker",
    "security",
    "tests",
    "tooling",
    "repo",
]

[[tool.commitizen.customize.questions]]
type = "input"
name = "message"
message = "Write a concise action summary"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py

[tool.ruff.lint.isort]
known-first-party = ["app"]
combine-as-imports = true

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
split_on_trailing_comma = true
known_first_party = ["app"]
skip = [".venv", "venv", "__pycache__", "logs"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "-q",
    "--strict-markers",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html",
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
precision = 2
# Keep this at the current CI baseline and raise it as scenario and E2E
# coverage improves; an unreachable threshold makes every PR red.
fail_under = 66
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@abstractmethod",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["dashscope.*", "langchain.*", "pymilvus.*"]
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests", ".venv", "venv"]
skips = ["B101", "B601"]

[tool.bandit.assert_used]
skips = ["*/test_*.py", "*_test.py"]

[tool.pyright]
# Editor/local analysis only; CI gate uses Ruff, mypy, Bandit, and pytest.
include = ["app"]
exclude = ["**/node_modules", "**/__pycache__", ".git", ".venv", "venv", "logs"]
pythonVersion = "3.11"
pythonPlatform = "Darwin"
typeCheckingMode = "basic"

reportMissingImports = "none"
reportMissingTypeStubs = "none"
reportUnknownParameterType = "none"
reportUnknownArgumentType = "none"
reportUnknownLambdaType = "none"
reportUnknownVariableType = "none"
reportUnknownMemberType = "none"
reportUntypedFunctionDecorator = "none"
reportUntypedClassDecorator = "none"
reportCallInDefaultInitializer = "none"
reportGeneralTypeIssues = "none"
reportOptionalMemberAccess = "none"

reportUnusedImport = "information"
reportUnusedVariable = "information"
reportDeprecated = "information"
